--- a/style1.css
+++ b/style1.css
@@ -318,3 +318,37 @@ justify-content: space-between;}
 .subtitle {
     color: rgba(0, 128, 0, 0.914);
 }
+@media screen and (max-width: 600px) {
+    .dashboard {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .sidebar {
+      order: 1;
+      width: 100%;
+    }
+    
+    .main-content {
+      order: 1;
+      width: 100%;
+      margin-top: 10px;
+    }
+    
+    .sidebar .brand p {
+      display: none;
+    }
+    .frontend,.Libraries {
+        flex-direction: column;
+    }
+    .html img,
+    .css img,
+    .javascript img,
+    .Wordpress img,
+    .Bootstrap img,
+    .React img {
+        
+      max-width: 100%;
+      height: auto;}
+    
+  }
