--- a/style1.css
+++ b/style1.css
@@ -348,16 +348,13 @@ justify-content: space-between;}
       margin: 0;
     }
     .sidebar .item {width: 100%;
-        margin: 0;
-    padding: 0;
+        
 justify-content: center;}
 
     .side-menu  {width: 100%;
-    margin: 0;
-padding: 0;}
+    }
 .menu-items  {width: 100%;
-    margin: 0;
-padding: 0;}
+    }
 
 
     p {width: 100%;
