--- a/style1.css
+++ b/style1.css
@@ -18,7 +18,6 @@
 }
 
 body {
-    background: var(--grey);
     flex-wrap: wrap;
     height: 100vh;
     overflow-y: auto;
@@ -38,7 +37,9 @@ body.dark-mode {
 .dashboard {
     max-width: 1250px;
     min-height: 700px;
-    background: var(--bg);
+    background:  url(Rose-Color-Palette-1-Photolodico.jpg) center ;
+    filter: brightness(120%);
+    background-size: cover;
     margin: 50px auto;
     display: flex;
     overflow-y: scroll;
@@ -200,7 +201,7 @@ overflow: hidden;}
     top: 0;
     left: -120%;
     transition: 1s left;
-    background-color:rgb(55,178,77);
+    background-color:rgba(55, 255, 20, 0.644);
     transform: skew(-10deg);}
     .newpage:hover::before {left: -30%;}
 
@@ -214,7 +215,7 @@ overflow: hidden;}
   .percentage {
     width: 85%;
     height: 100%;
-    background-color: #37b24d;
+    background-color: rgb(57,255,20);
     color: #fff;
     text-align: center;
     line-height: 30px;
@@ -223,7 +224,7 @@ overflow: hidden;}
   {
     width: 60%;
     height: 100%;
-    background-color: #37b24d;
+    background-color: rgb(57,255,20);
     color: #fff;
     text-align: center;
     line-height: 30px;
@@ -231,7 +232,7 @@ overflow: hidden;}
   .percentage-react {
     width: 5%;
     height: 100%;
-    background-color: #37b24d;
+    background-color: rgb(57,255,20);
     color: #fff;
     text-align: center;
     line-height: 30px;
