--- a/style1.css
+++ b/style1.css
@@ -375,5 +375,10 @@ justify-content: center;}
         
       max-width: 100%;
       height: auto;}
+    .popuplogin {
+       
+        margin-top: 250px;
+        
+    }
     
   }
