--- a/style1.css
+++ b/style1.css
@@ -40,6 +40,8 @@ body.dark-mode {
     background:  url(Rose-Color-Palette-1-Photolodico.jpg) center ;
     filter: brightness(120%);
     background-size: cover;
+    
+    background-repeat:no-repeat ;
     margin: 50px auto;
     display: flex;
     overflow-y: scroll;
@@ -232,7 +234,7 @@ overflow: hidden;}
   .percentage-react {
     width: 5%;
     height: 100%;
-    background-color: rgb(57,255,20);
+    background-color: #37b24d;
     color: #fff;
     text-align: center;
     line-height: 30px;
@@ -348,9 +350,13 @@ justify-content: space-between;}
       padding: 0;
       margin: 0;
     }
+    .popuplogin {order: 1;
+        width: 100%;
+    }
     .sidebar .item {width: 100%;
-        
+    
 justify-content: center;}
+
 
     .side-menu  {width: 100%;
     }
@@ -380,5 +386,5 @@ justify-content: center;}
         margin-top: 250px;
         
     }
-    
   }
+
